--- a/expense.html
+++ b/expense.html
@@ -1,94 +1,154 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Expense Page</title>
-  <style>
-    *{
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Investment Page</title>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    max-width: 900px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+*{
       background-color:darkkhaki;
-    }
+}
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    .oporer_part
-    {
-     text-align: center;
-     font-size: 50px;
-
-    } 
-    h1 {
-      color: #333;
+      padding: 30px;
     }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      border: 200px;
-    }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+    font-weight: bold;
+}
 
-    th, td {
-      padding: 15px;
-      text-align: left;
-      border-bottom: 1px solid crimson;
-    }
+th, td {
+    border: 1px solid #ddd;
+    padding: 18px;
+    text-align: center;
+    font-size:20px;
+}
 
-    th {
-      background-color:sienna;
-    }
+th {
+    background-color: #f2f2f2;
+}
 
-    tr{
-      font-size: 40px;
-      /* background-color:sienna; */
+td[contenteditable="true"] {
+    cursor: pointer;
+}
 
-    }
-    .table_part
-    {
-      color:black;
-       box-shadow: rgba(0, 0, 0, 0.9) 0px 5px 15px; 
-    }
+.remove-row {
+    background-color: #ff4136;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
 
-    .total {
-      font-weight: bold;
-      color: crimson;
-    }
-  </style>
+#add-row-button {
+    margin-top: 10px;
+    padding: 10px;
+    background-color:chocolate
+}
+
+#total-income {
+    font-weight: bold;
+}
+
+        </style>
 </head>
 <body>
-  <h1 class="oporer_part">Expense</h1>
+    <div class="container">
+        <h1>Expenses</h1>
+        <table id="income-table">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Description</th>
+                    <th>Amount</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td contenteditable="true">2023-09-29</td>
+                    <td contenteditable="true">Groceries</td>
+                    <td contenteditable="true">5000</td>
+                    <td><button class="remove-row">Remove</button></td>
+                </tr>
+                <tr>
+                    <td contenteditable="true">2023-09-30</td>
+                    <td contenteditable="true">Restaurant</td>
+                    <td contenteditable="true">1700</td>
+                    <td><button class="remove-row">Remove</button></td>
+                </tr>
+                <tr>
+                    <td contenteditable="true">2023-09-30</td>
+                    <td contenteditable="true">Transportation</td>
+                    <td contenteditable="true">700</td>
+                    <td><button class="remove-row">Remove</button></td>
+                </tr>
+            </tbody>
+        </table>
+        <button id="add-row-button">Add Row</button>
+        <p id="total-income">Total Expenses: <span >7400</span></p>
+    </div>
+    <script >
+        
+const incomeTable = document.getElementById('income-table');
+const addRowButton = document.getElementById('add-row-button');
+const totalIncomeElement = document.getElementById('total-income');
+const removeButtons = document.querySelectorAll('.remove-row');
 
-  <table>
-    <tr>
-      <th>Date</th>
-      <th>Amount</th>
-      <th>Description</th>
-      <th>Person</th>
-    </tr>
-    <tr>
-      <td>2023-07-01</td>
-      <td>$50</td>
-      <td>Groceries</td>
-      <td>John</td>
-    </tr>
-    <tr>
-      <td>2023-07-02</td>
-      <td>$30</td>
-      <td>Restaurant</td>
-      <td>Sarah</td>
-    </tr>
-    <tr>
-      <td>2023-07-04</td>
-      <td>$20</td>
-      <td>Transportation</td>
-      <td>Mike</td>
-    </tr>
-    <tr class="total">
-      <td></td>
-      <td>$100</td>
-      <td>Total Expenses</td>
-      <td></td>
-    </tr>
-  </table>
 
+incomeTable.addEventListener('input', updateTotal);
+function updateTotal() {
+    let totalIncome = 0;
+    const rows = incomeTable.getElementsByTagName('tr');
+    for (let i = 1; i < rows.length; i++) { 
+        const cells = rows[i].getElementsByTagName('td');
+        const date = cells[0].textContent;
+        const description = cells[1].textContent;
+        const amount = parseFloat(cells[2].textContent) || 0;
+        totalIncome += amount;
+    }
+    totalIncomeElement.textContent = totalIncome.toFixed(2);
+}
+
+
+function addRow() {
+    const newRow = incomeTable.insertRow(-1);
+    newRow.innerHTML = `
+        <td contenteditable="true">New Date</td>
+        <td contenteditable="true">New Description</td>
+        <td contenteditable="true">0</td>
+        <td><button class="remove-row">Remove</button></td>
+    `;
+    newRow.addEventListener('input', updateTotal);
+    const removeButton = newRow.querySelector('.remove-row');
+    removeButton.addEventListener('click', removeRow);
+}
+
+
+function removeRow() {
+    const row = this.closest('tr');
+    row.remove();
+    updateTotal();
+}
+
+removeButtons.forEach(button => {
+    button.addEventListener('click', removeRow);
+});
+addRowButton.addEventListener('click', addRow);
+
+    </script>
 </body>
 </html>
